--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@ select{
 .datos .td-user-image img{
 	border: 2px solid #fff;
 	height: 145px;
+	max-width: 250px;
 }
 
 .datos .td-user-image img:hover{
