--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -1182,137 +1182,6 @@ select{
 
 .etiqueta a:hover:before{border-color:transparent #a1ca4a transparent transparent;}
 
-
-/**
-* DIALOGO
-*/
-
-#dialogo{
-	width: 100%;
-	display: block;
-	z-index: 1;
-	position: absolute;
-	top: 120px;
-	background-color: transparent !important;
-}
-
-#dialogo #dialogoPrincipal{
-	width: 650px;
-	display: block;
-	margin: 0 auto;
-	border: 1px solid #dedede;
-	background-color: #fff;
-	border-radius: 5px;
-	font-size: 20px;
-	margin-top: 20px;
-
-		-o-box-shadow: 0 0 20px #dedede; /* Opera */
-		-ms-box-shadow: 0 0 20px #dedede; /* IE 9 */
-		-moz-box-shadow: 0 0 20px #dedede; /* Firefox */
-		-webkit-box-shadow: 0 0 20px #dedede; /* Safari and Chrome */
-	box-shadow: 0 0 20px #dedede;
-}
-
-#dialogoPrincipal #closeDialogo{
-	float: right;
-	margin-right: -15px;
-	margin-top: -10px;
-}
-
-#dialogo .titulo{
-	width: 100%;
-	background-color: #a1ca4a;
-	text-align: center; 
-	font-weight: bold;
-	color: #fff;
-	font-size: 20px;
-	display: block;
-	width: 100%;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	margin-bottom: 20px;
-}
-
-#dialogo button, input[type="reset"]{
-	font-size: 15px !important;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-
-#dialogo input[type="text"], 
-#dialogo input[type="number"], 
-#dialogo input[type="password"], 
-#dialogo input[type="email"],
-#dialogo textarea
-{
-	width: 200px;
-	border: 0 solid transparent !important;
-	padding: 0;
-	margin: 0;
-	margin-bottom: 10px;
-	color: #fff;
-	background-color: #747273;
-	font-size: 20px;
-	padding: 5px;
-	border-radius: 5px;
-	text-align: center;
-
-		-ms-box-shadow: none; /* IE 9 */
-		-moz-box-shadow: none; /* Firefox */
-		-webkit-box-shadow: none; /* Safari and Chrome */
-		-o-box-shadow: none; /* Opera */
-	box-shadow: none;
-}
-
-#dialogo textarea{
-	width: 90% !important;
-	margin: 0 auto; 
-	height: 150px;
-	min-height: 150px;
-	max-height: 300px;
-	text-align: left !important;
-}
-
-#dialogo .dialogoLeft{
-	float: left;
-	width: 200px;
-	text-align: center;
-}
-
-#dialogo .dialogoLeft #userImage{
-	width: 120px;
-}
-
-#dialogo .dialogoRight{
-	display: inline-block;
-	width: 450px;
-}
-
-#dialogo .dialogoRight table{
-	border-collapse: separate !important;
-	border-spacing: 20px 0px;
-	margin: 0 auto;
-	border: 0;
-}
-
-#dialogo .dialogoRight table .muestra{
-	text-align: center;
-}
-
-#dialogo .center{
-	display: block;
-	border: 0;
-	text-align: center;
-}
-
-#dialogo .controls{
-	width: 100%;
-	display: block;
-	margin-bottom: 20px;
-	text-align: center;
-}
-
 .seleccion{
 	overflow-y: auto; 
 	overflow-x: hidden; 
@@ -1328,6 +1197,31 @@ select{
 .seleccion .seleccionada{
 	background-color: #a1ca4a !important;
 	color: #fff !important;
+}
+
+/**
+ * 
+ */
+.preview .datos-preview{
+	width: 100%;
+}
+
+.preview .table-preview{
+	width: 100%;
+	border-collapse: collapse;
+	border: 0 solid transparent;
+}
+
+.preview .table-preview #normas,
+.preview .table-preview #articulos{
+	text-align: center;
+	font-size: 20px;
+	padding: 5px;
+}
+
+.preview .table-preview #normas li,
+.preview .table-preview #articulos li{
+	padding: 5px;
 }
 
 /*
