--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,7 @@ select{
 	padding-top: 5px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid #dedede;
+	color: #757373;
 }
 
 .panel #camino{
@@ -534,8 +535,7 @@ select{
 }
 
 .logoCliente{
-	float: left;
-	margin-left: 2%;
+	margin-right: 25px;
 	display: inline-block;
 	vertical-align: middle;
 	height: 100px;
@@ -551,7 +551,7 @@ select{
 	border: 0;
 	display: block;
 	margin-right: 6%;
-	margin-top: 30px;
+	margin-top: 10px;
 }
 
 /* clientes */
@@ -575,6 +575,7 @@ select{
 	text-align: center;
 	float: left;
 	min-width: 120px;
+	color: #757373;
 }
 
 #toolbarMenu .icon{
@@ -868,11 +869,50 @@ select{
 }
 
 #datos-footer{
+	display: block;
+	position: absolute;
 	text-align: center;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	width: 100%;
+	bottom: 0;
+}
+
+#panel-comentario{
+	width: 100%;
+	display: none;
+	margin: 0;
+	position: absolute;
+	bottom: 50px;
+	background-color: #f3efe6;
+	border-top: 1px solid #A5A3A4;
+}
+
+#panel-editor{
+	width: 80%;
+	float: left;
+}
+
+#panel-imagen {
+	float: right;
 	display: inline-block;
+	width: 20%;
+	margin-top: 70px;
+	margin-bottom: 20px;
+}
+
+#panel-imagen img{
+	height: 70px;
+	/*margin:-65px 0 0 -100px;*/
+}
+
+.img-wrapper {
+	height:70px; 
+	width:70px; 
+	border-radius:70px; 
+	border:4px solid white; 
+	overflow:hidden;
+	margin: 0 auto;
 }
 
 .box p{
@@ -1353,7 +1393,7 @@ select{
 	width: 60%;
 	padding: 0;
 	margin: 0;
-	color: #333;
+	color: #757373;
 	background-color: transparent;
 	font-size: 20px;
 	padding: 5px;
@@ -1406,7 +1446,7 @@ select{
 	width: 100%;
 	height: 150px;
 	max-height: 250px;
-	color: #333;
+	color: #757373;
 }
 
 .borderAlto{
