--- a/css/style.css
+++ b/css/style.css
@@ -879,14 +879,88 @@ select{
 	bottom: 0;
 }
 
+/**
+* COMENTARIOS
+*/
+
 #panel-comentario{
 	width: 100%;
 	display: none;
 	margin: 0;
 	position: absolute;
-	bottom: 50px;
+	bottom: 60px;
 	background-color: #f3efe6;
 	border-top: 1px solid #A5A3A4;
+	
+}
+
+#comentarios{
+	width: 100%;
+	max-height: 500px;
+	overflow: auto;
+	display: block;
+}
+
+.comentarios {
+	width: 100%;
+	border: none;
+	border-collapse: collapse;
+}
+
+#NewComentario{
+	margin-top: 10px;
+}
+
+.comentarios td{
+	padding-bottom: 10px;
+}
+
+.comentarios tr{
+	border-bottom: 2px solid #f3efe6;
+
+		-o-transition: all 3s ease-out;
+		-ms-transition: all 3s ease-out;
+		-moz-transition: all 3s ease-out;
+		-webkit-transition: all 3s ease-out;
+	transition: all 3s ease-out;
+}
+
+.comentarios tr:hover {
+		-o-transition: all 0.5s ease-out;
+		-ms-transition: all 0.5s ease-out;
+		-moz-transition: all 0.5s ease-out;
+		-webkit-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+	border-bottom: 2px solid #A1CA4A;;
+}
+
+.comentarios tr:hover .img-wrapper2{
+		-o-transition: all 0.5s ease-out;
+		-ms-transition: all 0.5s ease-out;
+		-moz-transition: all 0.5s ease-out;
+		-webkit-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+
+	border:4px solid #A1CA4A; 
+}
+
+.comentario-imagen{
+	width: 110px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.comentario-imagen .div-imagen{
+	margin: 0;
+}
+.comentario-imagen span{
+	margin-top: 5px;
+	text-transform: capitalize;
+}
+
+.comentario{
+	text-align: left;
+	vertical-align: middle;
 }
 
 #panel-editor{
@@ -894,7 +968,10 @@ select{
 	float: left;
 }
 
-/** IMAGEN ***/
+
+/** 
+	IMAGEN 
+***/
 .panel-imagen {
 	float: right;
 	display: inline-block;
@@ -923,7 +1000,23 @@ select{
 	transition: all 6s ease-out;
 }
 
-.img-wrapper:hover{
+.img-wrapper2 {
+	height:80px; 
+	width:80px; 
+	border-radius:80px; 
+	border:4px solid white; 
+	overflow:hidden;
+	margin: 0 auto;
+
+		-o-transition: all 3s ease-out;
+		-ms-transition: all 3s ease-out;
+		-moz-transition: all 3s ease-out;
+		-webkit-transition: all 3s ease-out;
+	transition: all 3s ease-out;
+}
+
+.img-wrapper:hover,
+.img-wrapper2:hover{
 
 		-o-transition: all 0.5s ease-out;
 		-ms-transition: all 0.5s ease-out;
@@ -1108,6 +1201,7 @@ select{
 	padding-bottom: 10px;
 	text-align: center;
 }
+
 
 /* 
 	ETIQUETAS	
