--- a/css/style.css
+++ b/css/style.css
@@ -174,14 +174,14 @@ select{
 	list-style: none;
 	border: 0;
 	padding: 5px;
-	font-size: 20px;
+	font-size: 18px;
 	cursor: pointer;
 }
 
 .lista{
 	list-style: none;
 	border: 0;
-	font-size: 20px;
+	font-size: 18px;
 	cursor: pointer;
 	text-align: center;
 }
@@ -212,7 +212,7 @@ select{
 .datos{
 	width: 100%;
 	margin: 0 auto;
-	font-size: 18px;
+	font-size: 16px;
 	overflow:auto;
 	margin-bottom: 70px;
 }
@@ -330,6 +330,11 @@ select{
 .buscador input[type="text"]:focus,
 .buscador input[type="text"]:hover{
 	color: #FFFFFF;
+	-moz-user-select: auto !important;  
+	-webkit-user-select: auto !important;  
+	-ms-user-select: auto !important;  
+	-o-user-select: auto !important;  
+	user-select: auto !important;
 }
 
 .datos #buscar-disponibles input:hover,
@@ -393,7 +398,7 @@ select{
 
 .panel #camino{
 	width: 100%;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 #camino li{
@@ -521,7 +526,7 @@ select{
 .titulo{
 	display: block;
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 	color: #747273;
 	padding-top: 5px;
 	padding-bottom: 5px;
@@ -585,7 +590,7 @@ select{
 	background-color: #fff;
 	border: 1px solid #dedede;
 	text-align: left;
-	font-size: 20px;
+	font-size: 18px;
 	vertical-align: middle;
 	border-radius: 5px;
 	cursor: pointer;
@@ -1178,7 +1183,7 @@ select{
 	vertical-align: middle;
 	margin: 0 auto;
 	margin-top: 20px;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
 	color: #747273;
 }
@@ -1410,7 +1415,7 @@ select{
 	margin-top: 20px;
 	margin-bottom: 10px;
 	display: block;
-	font-size: 20px;
+	font-size: 18px;
 	color: #A1CA4A;
 	text-align: left;
 	text-transform: capitalize;
@@ -1424,7 +1429,7 @@ select{
 
 .proyecto-decripcion{
 
-	font-size: 20px;
+	font-size: 16px;
 	color: #757373;
 	text-align: left;
 	width: 100%;
