--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -89,6 +89,10 @@ select{
 	min-width: 150px;
 }
 
+#menu .categoria ul{
+	border-left: 1px solid #dedede;
+}
+
 #menu .normas ul{
 	text-align: center;
 	display: block;
