--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -145,11 +145,38 @@ select{
 	padding-left: 40px !important;
 }
 
+.list li{
+	padding: 5px;
+	text-align: center;
+	font-family: 20px;
+	cursor: pointer;
+	border-bottom: 1px solid #dedede;
+}
+
+.list li:hover,
+.list li:focus,
+.list li:active{
+	background-color: #D5D4D5;
+}
+
+.focus{
+	border: 1px solid #A1CA4A;
+	box-shadow: 0 0 5px #A1CA4A;
+}
+
 .datos{
 	width: 95%;
 	margin: 0 auto;
 	border: 1px solid #dedede;
 	padding-top: 20px;
+	margin-top: 20px;
+	font-size: 18px;
+}
+
+.datosLista{
+	width: 95%;
+	margin: 0 auto;
+	border: 1px solid #dedede;
 	margin-top: 20px;
 	font-size: 18px;
 }
